--- a/Bookworm/Bookworm/Base.lproj/Localizable.strings
+++ b/Bookworm/Bookworm/Base.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   Copyright (c) 2015 Syzygy. All rights reserved.
 */
 
-"SignIn" = "Sign in";
+"SignIn" = "Log in";
 "SignUp" = "Sign up";
 "SignOut" = "Sign out";
 "SMSSignIn" = "SMS sign in";
