Update text constant, UIAlertController category, default setting class and analytics. Add custom HTTP response error code.

--- a/Bookworm/Bookworm/Base.lproj/Localizable.strings
+++ b/Bookworm/Bookworm/Base.lproj/Localizable.strings
@@ -9,7 +9,6 @@
 "SignIn" = "Log in";
 "SignUp" = "Sign up";
 "SignOut" = "Sign out";
-"SMSSignIn" = "SMS sign in";
 "MobileSignUp" = "Mobile sign up";
 "EmailSignUp" = "Email sign up";
 "SetPassword" = "Set password";
@@ -25,7 +24,7 @@
 "MusicStyle" = "Music style";
 "Tag" = "Tag";
 
-"Home" = "Home";
+"Home" = "Bookworm";
 "Activity" = "Activity";
 "Message" = "Message";
 "Me" = "Me";
@@ -39,14 +38,12 @@
 "Save" = "Save";
 "Send" = "Send";
 "Post" = "Post";
-"PostExchange" = "Post and Exchange";
 "Next" = "Next";
 "Skip" = "Skip";
 "Setting" = "Setting";
 "SendSMS" = "Send SMS";
 "Resend" = "Resend";
 "RemainingTime" = "Remain %.f";
-"SMSSignIn" = "SMS sign in";
 "EmailSignUp" = "Email sign up";
 "NoSMSCode" = "Not receive SMS code";
 "ForgotPassword" = "ForgotPassword";
@@ -59,38 +56,23 @@
 "Copy" = "Copy";
 "Record" = "Record";
 "Delete" = "Delete";
-"DeletePhoto" = "Delete photo";
-"DeleteVoice" = "Delete voice";
-"Favorite" = "Favorite";
-"Unfavorite" = "Unfavorite";
-"CheckIn" = "Check in";
+"Follow" = "Follow";
+"Unfollow" = "Unfollow";
 "Exchange" = "Exchange";
 "Chat" = "Chat";
 "Rating" = "Rating";
 "Report" = "Report";
-"UploadPhoto" = "Upload photo";
-"RecordVoice" = "Record voice";
-"Exchanged" = "My exchanged";
-"BeExchanged" = "Be exchanged";
 "SetChatBackground" = "Set chat background";
-"BlockMessage" = "Block the user";
-"UnblockMessage" = "Unblock the user";
 "RestoreDefaultBackground" = "Restore default background";
 "TakePhoto" = "Take photo";
 "SelectFromAlbum" = "Select from album";
-"CheckedIn" = "Checked in";
-"Rerecord" = "Rerecord";
-"StartRecord" = "Start record";
-"DoneRecord" = "Done record";
-"UploadDoneRecord" = "Upload voice";
-"ImageCache" = "Image cache";
-"MusicCache" = "Music cache";
 
-"CacheClearDone" = "Cache clear done";
 "ClearingCache" = "Clearing cache...";
-"ConnectionTimeout" = "Connection timeout";
-"NoNetworkConnection" = "No network connection";
-"NetworkUnstable" = "Your current network is unstable, please switch network.";
+"CacheClearDone" = "Cache clear done";
+"NetworkUnstable" = "Current network is unstable, please switch network.";
+"CannotConnectToHost" = "Maintaining server, please try later.";
+"NotConnectedToInternet" = "No network connection";
+"ConnectingIMServer" = "Receiving...";
 "MobileInvalid" = "Invalid mobile number";
 "MobileTaken" = "Mobile has been taken";
 "MobileNotFound" = "Mobile not signed up";
@@ -103,58 +85,22 @@
 "PasswordInvalid" = "Invalid password";
 "SMSCodeWrong" = "Wrong SMS code";
 "NicknameWrong" = "Wrong nickname";
-"AskForSetPassword" = "Do you want set password?";
-"SelectGender"  = "Please select gender, can't change after done.";
-"AskForDeletePhoto" = "Are you sure delete the photo?";
 "AskForSignOut" = "Are you sure sign out?";
 "AccessPhotosSetting" = "Please allow \"Ting Hua\" access your photos in your phone \"Settings-Privacy-Photos\"";
 "AccessCameraSetting" = "Please allow \"Ting Hua\" access your camera in your phone \"Settings-Privacy-Camera\"";
 "AccessMicrophoneSetting" = "Please allow \"Ting Hua\" access your microphone in your phone \"Settings-Privacy-Microphone\"";
-"SigningIn" = "Signing in...";
+"SigningIn" = "Loging in...";
 "CreatingUser" = "Creating user...";
-"ProfileInit" = "Initializing profile...";
-"Posting" = "Posting...";
-"VoiceUploading" = "Uploading voice...";
-"ComposingAudio" = "Composing...";
-"ChangingLanguage" = "Changing language...";
 "ThanksFeedback" = "Thanks for your support";
-"ReportSuccess" = "Report success";
-"UserKickOut" = "Your account already signed in from other device, please re-sign in.";
-"SessionTokenExpire" = "Page security authentication expired, please reload the page.";
+"ReportSuccess" = "Report successful";
+"UserKickOut" = "Your account already login from other device, please re-login.";
+"OldAppVersion" = "Your App version is old, please update from App Store.";
 "SingleTapRefresh" = "Single tap to refresh";
-"MaxTagCount" = "Only can select 10 tags once time";
-"AskForSaveRecord" = "Record hasn't been saved, are you sure exit?";
-"AskForDoneRecord" = "Music hasn't been play over, are you sure complete record?";
-"AskForRecordAgain" = "Rerecord will overwrite previous record, are you sure rerecord?";
-"AskForOverwriteRecord" = "The music already has voice, rerecord will overwrite it.";
-"AskForComposeAgain" = "Voice composition interrupted, do you want compose again?";
-"DeleteSuccess" = "Delete success";
-"RateSuccess" = "Rate success";
 
 "Male" = "Male";
 "Female" = "Female";
-"Day" = "Day";
-"NoChangingGender" = "No changing gender after done profile";
 "UserAgreement" = "User agreement";
 "AgreeUserAgreement" = "Click \"Sign up\" means have read and agree with ";
-"JustNow" = "Just now";
-"MinAgo" = "minute ago";
-"HourAgo" = "hour ago";
-"Yesterday" = "Yesterday";
-"SynchronizedTo" = "Synchronized to";
-"Photo" = "Photo";
-"Point" = "Point";
-"Posted" = "Posted";
-"OfPhoto" = "\'s photo";
-"UploadedPhoto" = "Uploaded photos";
-"MyMusicLibrary" = "My music library";
-"CheckedInDays" = "Checked in days";
 "ReportOtherReason" = "Other reason...";
-"PrepareRecording" = "The music will play after tap \"Recording\"";
-"TextRecording" = "Recording...";
-"Voice" = "Voice";
-"NoPhoto" = "No any photo, please upload one first.";
-"NewMessage" = "New message";
 
-"NewMessage" = "New message";
-"PlaceholderFeedback" = "Please fill your suggestion about \"Ting Hua\", we will improve continuously, thanks for you support.";
+"Feedback" = "Please fill your suggestion about \"Bookworm\", we will improve continuously, thanks for you support.";
