Register notification with category

--- a/Bookworm/Bookworm/Base.lproj/Localizable.strings
+++ b/Bookworm/Bookworm/Base.lproj/Localizable.strings
@@ -46,6 +46,7 @@
 "Exchange" = "Exchange";
 "Chat" = "Chat";
 "Play" = "Play";
+"Reply" = "Reply";
 "Rating" = "Rating";
 "Report" = "Report";
 "Share" = "Share";
