Update remote notification handling and message service class

--- a/Bookworm/Bookworm/Base.lproj/Localizable.strings
+++ b/Bookworm/Bookworm/Base.lproj/Localizable.strings
@@ -47,6 +47,8 @@
 "Chat" = "Chat";
 "Play" = "Play";
 "Reply" = "Reply";
+"Accept" = "Accept";
+"Reject" = "Reject";
 "Rating" = "Rating";
 "Report" = "Report";
 "Share" = "Share";
