--- a/Bookworm/Bookworm/zh-Hans.lproj/Localizable.strings
+++ b/Bookworm/Bookworm/zh-Hans.lproj/Localizable.strings
@@ -6,12 +6,6 @@
   Copyright (c) 2015 Syzygy. All rights reserved.
 */
 
-"MobileSignUp" = "手机号注册";
-"EmailSignUp" = "邮箱注册";
-"EditProfile" = "编辑资料";
-"ChangeNickname" = "更改昵称";
-"ChangePassword" = "更改密码";
-
 "Home" = "书虫";
 "Wish" = "想看";
 "Message" = "消息";
@@ -30,11 +24,8 @@
 "SignOut" = "退出登录";
 "Next" = "下一步";
 "Skip" = "跳过";
-"SendSMS" = "获取验证码";
-"Resend" = "重新发送";
-"RemainingTime" = "剩余%.f秒";
-"EmailSignUp" = "邮箱注册";
-"NoSMSCode" = "没收到验证码?";
+"Send" = "发送";
+"Resend" = "重发";
 "ForgotPassword" = "忘记密码?";
 "Delete" = "删除";
 "Refresh" = "刷新";
@@ -56,10 +47,18 @@
 "Weibo" = "新浪微博";
 "Qzone" = "QQ空间";
 "Douban" = "豆瓣";
-"TakePhoto" = "拍照";
+"TakePhoto" = "拍摄照片";
 "ChoosePhoto" = "选取照片";
 "SetChatBackground" = "设置聊天背景";
 "RestoreDefaultBackground" = "恢复默认背景";
+
+"EditProfile" = "编辑资料";
+"ChangeNickname" = "更改昵称";
+"ChangePassword" = "更改密码";
+
+"Nickname" = "昵称";
+"Gender" = "性别";
+"Location" = "地区";
 
 "ClearingCache" = "正在清除缓存...";
 "CacheClearDone" = "缓存已清除";
@@ -75,7 +74,7 @@
 "EmailTooLong" = "邮箱长度不能大于32位";
 "EmailNotFound" = "邮箱尚未注册";
 "PasswordWrong" = "密码错误";
-"PasswordTooShort" = "密码长度不能小于8位";
+"PasswordTooShort" = "密码长度不能小于6位";
 "PasswordInvalid" = "密码含有非法字符";
 "SMSCodeWrong" = "验证码错误";
 "NicknameTooLong" = "昵称长度不能大于32位";
@@ -93,7 +92,6 @@
 "AccessPhotosSetting" = "请在系统的“设置-隐私-照片”选项中，允许”书虫“访问你的照片。";
 "AccessCameraSetting" = "请在系统的“设置-隐私-相机”选项中，允许”书虫“访问你的相机。";
 "AccessMicrophoneSetting" = "请在系统的“设置-隐私-麦克风”选项中，允许”书虫“访问你的麦克风。";
-"AskForSignOut" = "确定退出登录？";
 "SignInAgain" = "账号已在其他设备登录，请重新登录。";
 "AppVersionUnavailable" = "应用版本过低，请到App Store更新。";
 
