--- a/Bookworm/Bookworm/zh-Hans.lproj/Localizable.strings
+++ b/Bookworm/Bookworm/zh-Hans.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "Skip" = "跳过";
 "Send" = "发送";
 "Resend" = "重发";
-"ForgotPassword" = "忘记密码?";
+"ForgotPassword" = "忘记密码";
 "Delete" = "删除";
 "Refresh" = "刷新";
 "MarkRead" = "标记已读";
@@ -42,7 +42,7 @@
 "Report" = "举报";
 "Share" = "分享";
 "Wechat" = "微信好友";
-"Moments" = "朋友圈";
+"WechatMoments" = "朋友圈";
 "QQ" = "QQ好友";
 "Weibo" = "新浪微博";
 "Qzone" = "QQ空间";
