--- a/Bookworm/Bookworm/zh-Hans.lproj/Localizable.strings
+++ b/Bookworm/Bookworm/zh-Hans.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "Skip" = "跳过";
 "Send" = "发送";
 "Resend" = "重发";
+"LookAround" = "随便看看";
 "ForgotPassword" = "忘记密码";
 "Delete" = "删除";
 "Refresh" = "刷新";
