--- a/Bookworm/Bookworm/zh-Hant.lproj/Localizable.strings
+++ b/Bookworm/Bookworm/zh-Hant.lproj/Localizable.strings
@@ -72,7 +72,7 @@
 "PasswordInvalid" = "密碼不能含有非法字符";
 "SigningIn" = "登入中...";
 "CreatingUser" = "賬號創建中...";
-"ThanksFeedback" = "感謝您對“書蟲”的支持";
+"ThanksFeedback" = "感謝您對「書蟲」的支持";
 
 "Photos" = "照片";
 "Camera" = "相機";
@@ -81,17 +81,17 @@
 "KickOut" = "註銷";
 "VersionInvalid" = "版本過低";
 
-"AccessPhotosSetting" = "請在系統的“設定-隱私權-照片”選項中，允許”書蟲“訪問你的照片。";
-"AccessCameraSetting" = "請在系統的“設定-隱私權-相機”選項中，允許”書蟲“訪問你的相機。";
-"AccessMicrophoneSetting" = "請在系統的“設定-隱私權-麥克風”選項中，允許”書蟲“訪問你的麥克風。";
+"AccessPhotosSetting" = "請在系統的「設定-隱私權-照片」選項中，允許「書蟲」訪問你的照片。";
+"AccessCameraSetting" = "請在系統的「設定-隱私權-相機」選項中，允許「書蟲」訪問你的相機。";
+"AccessMicrophoneSetting" = "請在系統的「設定-隱私權-麥克風」選項中，允許「書蟲」訪問你的麥克風。";
 "SignInAgain" = "賬號已在其他設備登入，請重新登入。";
 "AppVersionUnavailable" = "應用版本過低，請到App Store更新。";
 
 "Male" = "男";
 "Female" = "女";
 "UserAgreement" = "用戶協議";
-"AgreeUserAgreement" = "點擊\"註冊\"表示已閱讀并同意";
+"AgreeUserAgreement" = "點擊「註冊」表示已閱讀并同意";
 "SingleTapRefresh" = "點擊熒幕重新加載";
 
 "ReportOtherReason" = "其他原因...";
-"Feedback" = "請寫下關於“書蟲”的意見和建議，我們將不斷完善，感謝您的支持！";
+"Feedback" = "請寫下關於「書蟲」的意見和建議，我們將不斷完善，感謝您的支持！";
